Fix spacing issue and add background for quote section

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 .hero-container{
     display: flex;
     flex-direction: column;
-    height: 70vh;
+    height: 75vh;
     /*background-color: #f5a568;*/
     background-image: linear-gradient(to bottom right, #f5a568, #303030);
     flex-shrink: 0;
@@ -31,7 +31,7 @@ body{
 .links-for-header{
     display: flex;
     list-style: none;
-    gap: 10px;
+    gap: 15px;
     margin-left: auto;
     margin-right: 50px;
 }
@@ -41,7 +41,7 @@ a{
     color: black;
     font-size: 18px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    font-weight: bold;
 }
 
 .hero-section{
@@ -106,8 +106,10 @@ a{
 /*info section*/
 
 .information-container{
+    display: flex;
     height: 60vh;
     justify-content: center;
+    align-items: center;
 }
 
 .meet{
@@ -115,6 +117,7 @@ a{
     font-weight: bolder;
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 0;
 }
 
 .noya-icon{
@@ -144,4 +147,15 @@ a{
 
 .noya-content-container img{
     border: 2px solid black;
+}
+
+/*quote section*/
+.quote-container{
+    display: flex;
+    flex-direction: column;
+    height: 60vh;
+    /*background-color: #f5a568;*/
+    background-color: lightgray;
+    flex-shrink: 0;
+    overflow: hidden;
 }
